fixed bug for IE that left the modal container covering the app content on Modal.dismiss

--- a/src/assets/css/octane.css
+++ b/src/assets/css/octane.css
@@ -148,7 +148,7 @@ o-modal-container {
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 0;
+  z-index: -1;
   pointer-events: none;
   overflow-y: hidden;
   opacity: 0;
@@ -186,7 +186,13 @@ o-modal {
   left: 0;
   z-index: 999999999;
   overflow-y: scroll;
-  will-change: transform; }
+  will-change: transform;
+  transition: transform 0.3s cubic-bezier(0.465, 0.183, 0.153, 0.946), opacity 0.5s cubic-bezier(0.465, 0.183, 0.153, 0.946); }
+
+.modal-transitioning {
+  visibility: visible;
+  display: block;
+  opacity: 1; }
 
 .modal-active {
   opacity: 1;
