--- a/src/modules/modals/scss/_modal.scss
+++ b/src/modules/modals/scss/_modal.scss
@@ -4,7 +4,7 @@ o-modal-container{
     width:100%;
     top:0;
     left:0;
-    z-index:0;
+    z-index:-1;
     pointer-events:none;
     overflow-y:hidden;
    
@@ -48,6 +48,15 @@ o-modal {
     z-index:999999999;
     overflow-y:scroll;
     will-change:transform;
+    transition: 
+        transform 0.3s cubic-bezier(0.465,0.183,0.153,0.946),
+        opacity 0.5s cubic-bezier(0.465,0.183,0.153,0.946);
+}
+
+.modal-transitioning{
+    visibility:visible;
+    display:block;
+    opacity:1;
 }
 
 .modal-active{
